<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            app:title="@string/messages_header">

        <ListPreference
                app:key="fec_level"
                app:title="@string/settings_fec_level"
                android:summary="@string/settings_fec_summary"
                app:entries="@array/fec_levels"
                app:entryValues="@array/fac_levels_values"
                app:defaultValue="q"
                app:useSimpleSummaryProvider="true"/>

        <CheckBoxPreference
            app:key="add_crc"
            app:title="@string/settings_enable_crc"
            android:summary="@string/settings_enable_crc_summary"
            app:defaultValue="true"
            />

    </PreferenceCategory>
<PreferenceCategory app:title="@string/settings_recognition">
    <EditTextPreference
        android:defaultValue="6"
        android:key="settings_recording_duration"
        android:title="@string/title_settings_minimal_signal_noise_ration"
        android:summary="@string/summary_settings_minimal_signal_noise_ration"
        android:dependency="settings_snr"
        android:inputType="numberDecimal"/>
</PreferenceCategory>

</androidx.preference.PreferenceScreen>
